[gd_scene load_steps=5 format=3 uid="uid://4tjlflb382tw"]

[ext_resource type="StyleBox" uid="uid://cgun4fkvgk55p" path="res://Background.tres" id="1_2msvk"]
[ext_resource type="Script" path="res://MainMenu.gd" id="1_tq1bm"]
[ext_resource type="Theme" uid="uid://bojo6mnyoqia4" path="res://Button.tres" id="2_r4smx"]
[ext_resource type="PackedScene" uid="uid://bxuyf17ctmkqj" path="res://Title.tscn" id="3_2e7fs"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tq1bm")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_2msvk")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = -6.0
offset_right = 1280.0
offset_bottom = 748.0

[node name="HBoxContainer" parent="." instance=ExtResource("3_2e7fs")]
layout_mode = 2
offset_right = 1088.0
offset_bottom = 257.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -272.0
offset_right = 256.0
offset_bottom = -80.0
grow_vertical = 0
theme_override_constants/separation = 10

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_r4smx")
text = "Load Game"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_r4smx")
text = "New Game"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_r4smx")
disabled = true
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_r4smx")
text = "Quit
"

[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
